# papermerge-cli

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml  version_bump.yml
changelog.d/: 11.added.md  13.added.md  15.fixed.md  17.fixed.md  20.added.md  noissue.added.md
papermerge_cli/: api_client.py  depricated_rest.py  exceptions.py  main.py  rest.py  types.py  utils.py
papermerge_cli/fetch/: __init__.py  nodes.py  users.py
papermerge_cli/format/: __init__.py  nodes.py  users.py
papermerge_cli/lib/: importer.py  nodes.py  users.py  version.py
papermerge_cli/rest/: __init__.py  documents.py  nodes.py  users.py  version.py
papermerge_cli/schema/: __init__.py  documents.py  folders.py  nodes.py  paginator.py  users.py
tests/: conftest.py  test_api_client.py  test_utils.py
tests/rest/: test_documents.py  test_nodes.py
