[tool.poetry]
name = "papermerge-cli"
version = "0.3.2"
description = "Command line utility for your Papermerge DMS instance"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
papermerge-restapi-client = "^1.0.34"
backoff = "^2.2.1"
rich = "^12.6.0"

[tool.poetry.scripts]
papermerge-cli = "papermerge_cli.main:cli"

[tool.poetry.group.dev.dependencies]
towncrier = "^22.8.0"
pytest = "^7.2.0"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## {version} - {project_date}"
issue_format = "[Issue#{issue}](https://github.com/papermerge/papermerge-cli/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

