[tool.poetry]
name = "papermerge-cli"
version = "0.8.0"
description = "Command line utility for your Papermerge DMS instance"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
backoff = "^2.2.1"
rich = "^13.4.2"
pydantic = {extras = ["email"], version = "^2.5"}
requests = "^2.31.0"
laconiq = "^0.3.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
papermerge-cli = "papermerge_cli.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
requests-mock = {extras = ["fixture"], version = "^1.11.0"}
pre-commit = "^3.3.3"
